@@ -7,6 +7,7 @@ Engine changes
 --------------
 
 * Treasure dialogs are now optional (#1076).
+* Fix random movement giving the same path for all entities on Mac (#1083).
 * Fix possible crash when reloading very old savegame files (#1064).
 * Fix crash when a sprite PNG file is missing.
 * Fix joypad deadzone issue (#672) by strycore.
